# VRC-LOG

./: .gitignore  Cargo.toml  LICENSE  README.md  VRC-LOG.PMC
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
benches/: cache_bench.rs  cache_disk_bench.rs
src/: cache.rs  config.rs  discord.rs  lib.rs  main.rs  process.rs  settings.rs  vrchat.rs  windows.rs
src/provider/: avtrdb.rs  avtrzip.rs  cache.rs  cutedb.rs  doughnut.rs  jeff.rs  kitsunedb.rs  mod.rs  neko.rs  nsvr.rs  paw.rs  prelude.rs  ravenwood.rs  sqlite.rs  vrcdb.rs  vrcds.rs  vrcga.rs  vrcwb.rs
