[package]
name = "vrc-log"
version = "0.12.2"
authors = ["Shayne Hartford <shaybox@shaybox.com>"]
edition = "2021"
description = "VRChat Local Avatar ID Logger"
readme = "README.md"
homepage = "https://git.shaybox.com/vrc-log/releases/latest"
repository = "https://github.com/ShayBox/VRC-LOG"
license = "MIT"
keywords = ["vrchat", "local", "cache", "avatar", "logger"]
categories = ["config", "database", "filesystem", "games", "parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
cached = { version = "0.55", optional = true }
chrono = "0.4"
colored = "3"
crossbeam = "0.8"
crossterm = { version = "0.29", optional = true }
discord-presence = { version = "1", optional = true }
futures = "0.3"
lazy-regex = "3"
notify = "8"
parking_lot = "0.12"
reqwest = { version = "0.12", features = ["json"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.27", features = ["derive"] }
terminal-link = "0.1"
time = { version = "0.3", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-rusqlite-new = { version = "0.10", features = ["bundled"], optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }

[features]
default = ["cache", "avtrdb", "vrcdb", "vrcds", "vrcwb", "paw", "title"]

# VRChat Avatar Database Providers
cache = ["dep:tokio-rusqlite-new"]
avtrdb = ["dep:reqwest", "discord"]
vrcdb = ["dep:reqwest", "discord"]
vrcds = ["dep:reqwest", "discord"]
vrcwb = ["dep:reqwest", "discord"]
paw = ["dep:reqwest"]

discord = ["dep:discord-presence", "dep:cached"]
title = ["dep:crossterm"]

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
similar_names = "allow"