[package]
name = "vrc-log"
version = "0.14.0"
authors = ["Shayne Hartford <shaybox@shaybox.com>"]
edition = "2021"
description = "VRChat Local Avatar ID Logger"
readme = "README.md"
homepage = "https://git.shaybox.com/vrc-log/releases/latest"
repository = "https://github.com/ShayBox/VRC-LOG"
license = "MIT"
keywords = ["vrchat", "local", "cache", "avatar", "logger"]
categories = ["config", "database", "filesystem", "games", "parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
cached = { version = "0.56", optional = true }
chrono = "0.4"
colored = "3"
crossbeam = "0.8"
crossterm = { version = "0.29", optional = true }
derive-config = { version = "2", features = ["dirs", "toml"] }
discord-presence = { version = "2", optional = true }
futures = "0.3"
inquire = "0.7"
lazy-regex = "3"
notify = "8"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.27", features = ["derive"] }
terminal-link = "0.1"
time = { version = "0.3", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-rusqlite-new = { version = "0.11", features = ["bundled"], optional = true }
tracing = "0.1"
tracing-subscriber = { version = "=0.3.19", features = ["env-filter", "time"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
] }

[features]
default = ["cache", "avtrdb", "vrcdb", "vrcds", "vrcwb", "paw", "title", "rustls-tls"]

# VRChat Avatar Database Providers
cache = ["dep:tokio-rusqlite-new"]
avtrdb = ["dep:reqwest", "discord"]
vrcdb = ["dep:reqwest", "discord"]
vrcds = ["dep:reqwest", "discord"]
vrcwb = ["dep:reqwest", "discord"]
paw = ["dep:reqwest"]

discord = ["dep:discord-presence", "dep:cached"]
title = ["dep:crossterm"]

native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
similar_names = "allow"