[package]
name = "vrc-log"
version = "0.15.1"
edition = "2024"
license = "MIT"
readme = "README.md"
authors = ["Shayne Hartford <shaybox@shaybox.com>"]
categories = ["config", "database", "filesystem", "games", "parsing"]
description = "VRChat Local Avatar ID Logger"
homepage = "https://git.shaybox.com/vrc-log/releases/latest"
keywords = ["vrchat", "local", "cache", "avatar", "logger"]
repository = "https://github.com/ShayBox/VRC-LOG"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
cached = { version = "0.56", optional = true }
chrono = "0.4"
colored = "3"
crossterm = { version = "0.29", optional = true }
derive-config = { version = "2", features = ["dirs", "toml"] }
discord-presence = { version = "3", optional = true }
flume = "0.12"
futures = "0.3"
inquire = "0.9"
itertools = "0.14"
lazy-regex = "3"
notify = "8"
parking_lot = "0.12"
reqwest = { version = "0.13", features = ["json", "query"], optional = true }
rusqlite = "0.38"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.27", features = ["derive"] }
terminal-link = "0.1"
time = { version = "0.3", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-rusqlite-new = { version = "0.12", features = ["bundled"], optional = true }
tracing = "0.1"
tracing-subscriber = { version = "=0.3.19", features = ["env-filter", "time"] }

[dev-dependencies]
criterion = "0.8"
reqwest = "0.13"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
] }

[features]
default = [
    "cache",
    "avtrdb",
    "nsvr",
    "paw",
    "vrcdb",
    "vrcwb",
    "title",
]

# VRChat Avatar Database Providers
cache = ["dep:tokio-rusqlite-new"]
avtrdb = ["dep:reqwest", "discord"]
nsvr = ["dep:reqwest", "discord"]
paw = ["dep:reqwest"]
vrcdb = ["dep:reqwest", "discord"]
vrcwb = ["dep:reqwest", "discord"]

discord = ["dep:discord-presence", "dep:cached"]
title = ["dep:crossterm"]

[[bench]]
name = "cache_bench"
harness = false

[[bench]]
name = "cache_disk_bench"
harness = false

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
similar_names = "allow"
